--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
 <header>
     
     <nav>
-      <a href="#about">About</a>
+      <a href="index.html">About</a>
       <a href="#skills">Skills</a>
       <a href="projects.html">Projects</a>
       <a href="#contact">Contact</a>
