--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,8 @@
     
     <nav>
       <a href="index.html">About</a>
-      <a href="#skills">Skills</a>
       <a href="projects.html">Projects</a>
-      <a href="#contact">Contact</a>
+      <a href="contact.html">Contact</a>
       <a href="login.html">Login</a>
       <a href="signup.html">Signup</a>
     </nav>
